--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "sourcemap-istanbul-instrumenter-loader": "0.2.0",
     "style-loader": "4.0.0",
     "swagger-ui-dist": "5.17.14",
+    "tailwindcss": "^3.4.6",
     "terser-webpack-plugin": "5.3.10",
     "thread-loader": "4.0.2",
     "ts-jest": "29.1.5",
