--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react-transition-group": "4.4.5",
     "reactstrap": "9.2.2",
     "redux": "5.0.1",
+    "redux-saga": "^1.3.0",
     "tslib": "2.6.3",
     "uuid": "10.0.0"
   },
