--- a/package.json
+++ b/package.json
@@ -86,11 +86,15 @@
     "@fortawesome/fontawesome-svg-core": "6.5.2",
     "@fortawesome/free-solid-svg-icons": "6.5.2",
     "@fortawesome/react-fontawesome": "0.2.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "2.2.5",
     "axios": "1.7.2",
     "bootstrap": "5.3.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dayjs": "1.11.11",
     "lodash": "4.17.21",
+    "lucide-react": "^0.412.0",
     "path-browserify": "1.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -106,6 +110,8 @@
     "reactstrap": "9.2.2",
     "redux": "5.0.1",
     "redux-saga": "^1.3.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "2.6.3",
     "uuid": "10.0.0"
   },
@@ -121,7 +127,7 @@
     "@types/webpack-env": "1.18.5",
     "@typescript-eslint/eslint-plugin": "7.13.1",
     "@typescript-eslint/parser": "7.13.1",
-    "autoprefixer": "10.4.19",
+    "autoprefixer": "^10.4.19",
     "browser-sync": "2.29.3",
     "browser-sync-webpack-plugin": "2.3.0",
     "concurrently": "8.2.2",
@@ -152,6 +158,8 @@
     "lint-staged": "15.2.7",
     "merge-jsons-webpack-plugin": "2.0.1",
     "mini-css-extract-plugin": "2.9.0",
+    "postcss": "^8.4.39",
+    "postcss-import": "^16.1.0",
     "postcss-loader": "8.1.1",
     "prettier": "3.3.2",
     "prettier-plugin-java": "2.6.0",
