--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,13 @@
     "checkJs": false,
     "baseUrl": "./",
     "paths": {
-      "app/*": ["src/main/webapp/app/*"]
+      "app/*": ["src/main/webapp/app/*"],
+      "@/*": ["@/*"]
     },
     "importHelpers": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/main/webapp/app", "tailwind.config.js"],
+  "include": ["src/main/webapp/app", "tailwind.config.js, @"],
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx"]
 }
