--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
     "@fortawesome/fontawesome-svg-core": "6.5.2",
     "@fortawesome/free-solid-svg-icons": "6.5.2",
     "@fortawesome/react-fontawesome": "0.2.2",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "2.2.5",
     "axios": "1.7.2",
@@ -98,7 +100,7 @@
     "path-browserify": "1.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "7.52.0",
+    "react-hook-form": "^7.52.1",
     "react-jhipster": "0.25.3",
     "react-loadable": "5.5.0",
     "react-redux": "9.1.2",
@@ -113,7 +115,8 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "2.6.3",
-    "uuid": "10.0.0"
+    "uuid": "10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@testing-library/react": "16.0.0",
