--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/main/webapp/app", "tailwind.config.js, @"],
+  "include": ["src/main/webapp/app", "tailwind.config.js", "@"],
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx"]
 }
