--- a/package.json
+++ b/package.json
@@ -117,7 +117,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tslib": "2.6.3",
     "uuid": "10.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@testing-library/react": "16.0.0",
